--- a/CampusX_Home.html
+++ b/CampusX_Home.html
@@ -16,9 +16,9 @@
 		
 		<ul>
 				<li><a href="#" class="active">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Service</a></li>
-				<li><a href="#">Plants</a></li>
+				<li><a href="#">Admin</a></li>
+				<li><a href="#">Classroom</a></li>
+				<li><a href="#">Dashboard</a></li>
 				<li><a href="#">Contact</a></li>
 		</ul>		
 	</header>
@@ -117,7 +117,7 @@
 		
 		<div class="footer-container">
 			<div class="left-col">
-				<img src="x.png" alt="" class="x">
+				<img src="" alt="" class="x">
 				<div class="social-media">
 					<tr>
 					<td width="10%"><a href="https://www.facebook.com/campusx.official/reviews/?ref=page_internal"><img src="https://github.com/Ranjan-Das-cloud/CSS_Repo_1/blob/master/Images/124010.png?raw=true" width="5%" height="5%"></a></td>
