--- a/CampusX_Home.html
+++ b/CampusX_Home.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body style="height: 600px">
-	<header id="header">
+	<header id="header" class="navbar">
 		<a href="#"class="logo">Campus{X}</a>
 		
 		<ul>
@@ -22,10 +22,10 @@
 				<li><a href="#">Contact</a></li>
 		</ul>		
 	</header>
-	<img src="https://github.com/Ranjan-Das-cloud/CSS_Repo_1/blob/master/Images/abc.png?raw=true" align="center" height="700" width="1200">
+	
 
 
-	<div>
+	<div class="free-div">
 		<div class="scrolltext">
 
 
@@ -127,7 +127,7 @@
 					<td width="10%"><a href="#"><img src="https://github.com/Ranjan-Das-cloud/CSS_Repo_1/blob/master/Images/1200px-Linkedin.svg.png?raw=true" width="5%" height="5%"></a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
 					
 				</div>
-				<p class="rights-text">&copy; CampusX </p>
+				<p class="rights-text"><b><i>All credits reserved</i> &copy; CampusX </b></p>
 			</div>
 
 
