--- a/CampusX_Home.html
+++ b/CampusX_Home.html
@@ -28,10 +28,16 @@
 	<div class="free-div">
 		<div class="scrolltext">
 
+			<center>
+			<div id="About">
+				
+				<p><strong><b><h2>About Us</h2></b></strong></p>
+			</div>
+		</center>
 
 
 	
-		<section id="home">
+		<section>
 		<div>
 			<h2>Devil’s Ivy or pothos (Epipremnum aureum) </h2><br>
 			<p>Otherwise known as pothos or golden pothos, devil's ivy is an easy to grow indoor houseplant that will fight off common household toxins. It adds instant colour to any room with cascading tendrils and grows well in water, pots and hanging baskets. The heartleaf philodendron has also been said to be harder to kill than to keep alive! 
@@ -50,7 +56,7 @@
 		<img src="https://www.ourhouseplants.com/imgs-content/pothos_aureum_houseplant.jpg">
 		
 	</section>
-	<section id="about">
+	<section>
 		<div>
 			<h2>Peace Lily (Spathiphyllum) </h2><br>
 			<p>Also known as a spathiphyllum, peace lilies are an easy and undemanding plant to look after. Their glossy green leaves make the perfect addition to any room especially those spots with low light. Keep them happy with a weekly water and fertilise with a slow-release fertiliser in spring to promote growth and those glorious white flowers.
@@ -64,7 +70,7 @@
 		</section>
 
 
-	<section id="service">
+	<section>
 		<div>
 			<h2>Spider Plant (Chlorophytum comosum) </h2><br>
 			<p>Spider plants are the perfect choice for newbies and those with a bad track record when it comes to plants. They thrive in indirect sunlight and survive in just about any condition (they’ve been known to survive in temperatures as low as 2 degrees). Spider plants also send out shoots of baby spider plants called spiderettes. </p><br>
@@ -78,7 +84,7 @@
 		</section>
 	
 
-	<section id="plants">
+	<section>
 		<div>
 			<h2>Chrysanthemums (Chrysanthemum morifolium)</h2><br>
 			<p>Chrysanthemums otherwise known as disbuds or mums are not only a great addition to a floral arrangement but they look great in your home and are known as one of the best air purifiers around. They are among the more difficult air purifiers to grow but the payoff is beautiful colourful blooms. They enjoy good air flow, bright indirect sunlight and watering with warm water only, making sure that they are allowed to dry fully in between drinks.
